codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__accounts_popup_foreign_lease.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Accounts
  Select an account to make it active, or add a new one.

› 1. Work (current)  lease: current session • status: available • email: work@example.com
  2. Personal        lease: another live session • status: leased by another live session • email:
                     personal@example.com
  3. Add account...  sign in to add another ChatGPT account

  Press enter to confirm or esc to go back
