codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__accounts_popup_fractional_remaining_window.snap
---
source: tui/src/chatwidget/tests.rs
expression: snapshot_popup
---
  Accounts
  Select an account to make it active, or add a new one.

› 1. Work (current)  email: work@example.com
  2. Personal        status: available • email: personal@example.com • 5h: 99% • weekly: 20%
  3. Add account...  sign in to add another ChatGPT account

  Press enter to confirm or esc to go back
