codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__accounts_popup_loading.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Accounts
  Loading account usage data...

› 1. ⏳  Fetching account status...  Please wait a moment.

  Press enter to confirm or esc to go back
