codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__accounts_popup_single_weekly_window.snap
---
source: tui/src/chatwidget/tests.rs
expression: snapshot_popup
---
  Accounts
  Select an account to make it active, or add a new one.

› 1. Work (current)  status: weekly limit reached • email: work@example.com • weekly: 0% (resets
                     Fri <local-reset>, in 2d)
  2. Personal        email: personal@example.com
  3. Add account...  sign in to add another ChatGPT account

  Press enter to confirm or esc to go back
