codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup_guardian_current_when_feature_disabled.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Update Model Permissions

  1. Default                       Codex can read and edit files in the
                                   current workspace, and run commands.
                                   Approval is required to access the internet
                                   or edit other files.
› 2. Guardian Approvals (current)  Same workspace-write permissions as
                                   Default, but eligible `on-request`
                                   approvals are routed through the guardian
                                   reviewer subagent.
  3. Full Access                   Codex can edit files outside this workspace
                                   and access the internet without asking for
                                   approval. Exercise caution when using.

  Press enter to confirm or esc to go back
